- Fixed: [SMB] Allow an empty username and password field
- Fixed: [SMB] Don't replace \\ by smb:// when not at the start of the path
- Fixed: Stop timeshifting at the backend side on buffer open failure.
- Fixed: Recordings: Fix playback for in-progress recordings. Play them always via the PVR addon to account for the growing file length

v1.9.12
- Updated language files from Transifex

v1.9.11
- Updated language files from Transifex

v1.9.10
- add timeshift buffer functions

v1.8.9
- TSReader: Fixed: channel switching behavior when switching across tsbuffer files
- TSReader: Fixed: Windows share access in multiseat mode (return smb:// URI's instead of \\UNC paths to XBMC also for Windows)
- TSReader: Fixed: SD<->HD channel switching with "fast channel switching" enabled (add PAT detection to find the exact start of the new channel in the timeshift buffer file)
- Recordings: Add support for retrieving and storing the playback resume position (requires TVServerXBMC build 121 or higher)
- Recordings: Trigger a recording list update when the backend couldn't find the selected recording
- Fixed: potential out-of-bounds array access while accessing TV Card info
- Fixed: Hide smb password in debug xbmc.log file
- Added: support for retrieving channels from multiple specified groups (>1, < All groups) (requires TVServerXBMC build 122 or higher)
- Changed: drop support for TVServerXBMC builds older than 1.1.x.107
- Changed: more log notifications on errors
- EPG: added additional genre strings to the genre string to id translation table

v1.8.8
- sync with PVR API v1.8.0

v1.7.8
- Bump after PVR API version bump

v1.6.8
- Channels: Use MediaPortal VisibleInGuide property as inverted IsHidden flag in XBMC. (requires TVServerXBMC build 120)
- Channelgroups: Don't import other channel groups when the user selected to import channels from a single group.
- TSReader: non-Windows: start playback as soon as the buffer file has a non-zero length